--- a/paginaInicial.html
+++ b/paginaInicial.html
@@ -106,20 +106,48 @@
                     </li>
                      <li class="catItem">
                         <a href="#">
-                            <img src="Images/iconefoto.png" alt="Videogames">
+                            <img src="Images/videogame.png" alt="Videogames">
                             <p>Videogames</p>
                         </a>
                     </li>
                     <li class="catItem">
                         <a href="#">
-                           <img src="Images/iconefoto.png" alt="Relógios">
+                           <img src="Images/relogioo.png" alt="Relógios">
                             <p>Relógios</p>
                         </a>
                     </li>
                      <li class="catItem">
                         <a href="#">
-                           <img src="Images/iconefoto.png" alt="Casa Inteligente">
+                           <img src="Images/oculos.png" alt="oculos">
                             <p>Óculos</p>
+                        </a>
+                    </li>
+
+                    <li class="catItem">
+                        <a href="#">
+                           <img src="Images/roupa.png" alt="roupa">
+                            <p>Roupa</p>
+                        </a>
+                    </li>
+
+                    <li class="catItem">
+                        <a href="#">
+                           <img src="Images/jardim.png" alt="jardim">
+                            <p>Jardim</p>
+                        </a>
+                    </li>
+
+                    <li class="catItem">
+                        <a href="#">
+                           <img src="Images/livro.png" alt="livros">
+                            <p>Livros</p>
+                        </a>
+                    </li>
+
+                    <li class="catItem">
+                        <a href="#">
+                           <img src="Images/panela.png" alt="Cozinha">
+                            <p>Cozinha</p>
                         </a>
                     </li>
                 </ul>
