--- a/entrar.html
+++ b/entrar.html
@@ -21,7 +21,7 @@
      </header>
     <h1 id="tituloEn">Entrar</h1>
     
-    <form id="Endereço" action= "/action_page.php  ">    
+    <form id="Endereço" action= "paginaInicial.html">    
     <input type="text" id="fname" name="fname" placeholder="E-mail/Telefone/Usuário" style="width: 60%;"><br>
     <input type="password" id="fname" name="fname" placeholder="Senha" style="width: 60%;"><br><br>
     <input type="submit" id="botaoentre" value="Enviar" style="width: 60%;"><br>
