--- a/paginaproduto.html
+++ b/paginaproduto.html
@@ -105,6 +105,28 @@
                         </div>
                     </div>
                 </li>
+
+                  <li class="avaliacoesItem">
+                    <div class="estrelas">
+                        <img src="Images/estrela.png" alt="">
+                        <img src="Images/estrela.png" alt="">
+                        <img src="Images/estrela.png" alt="">
+                        <img src="Images/estrela.png" alt="">
+                        <img src="Images/estrela.png" alt="">
+                    </div>
+                    <div class="avaliacaoTexto">
+                        <h4>Titulo</h4>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis distinctio architecto autem
+                            repudiandae incidunt, id, adipisci</p>
+                        <div class="reviwer">
+                            <img src="Images/iconefoto.png" alt="">
+                            <div>
+                                <p id="reviwernome">reviwernome</p>
+                                <p id="data">data</p>
+                            </div>
+                        </div>
+                    </div>
+                </li>
             </ul>
         </section>
 
@@ -114,7 +136,55 @@
                 <a href=""> Mostrar Tudo</a>
             </div>
             <ul id="produtos">
-                <!-- ... -->
+                <li class="produtoItemPai">
+                    <a href="paginaproduto.html" class="produtoItem">
+                        <img src="Images/iconefoto.png" />
+                    <div>
+                        <h3>Nome</h3>
+                        <p>R$100,00</p>
+                    </div>
+                    </a>
+                </li>
+
+                <li class="produtoItemPai">
+                    <a href="paginaproduto.html" class="produtoItem">
+                        <img src="Images/iconefoto.png" />
+                    <div>
+                        <h3>Nome</h3>
+                        <p>R$100,00</p>
+                    </div>
+                    </a>
+                </li>
+
+                <li class="produtoItemPai">
+                    <a href="paginaproduto.html" class="produtoItem">
+                        <img src="Images/iconefoto.png" />
+                    <div>
+                        <h3>Nome</h3>
+                        <p>R$100,00</p>
+                    </div>
+                    </a>
+                </li>
+
+                <li class="produtoItemPai">
+                    <a href="paginaproduto.html" class="produtoItem">
+                        <img src="Images/iconefoto.png" />
+                    <div>
+                        <h3>Nome</h3>
+                        <p>R$100,00</p>
+                    </div>
+                    </a>
+                </li>
+
+                <li class="produtoItemPai">
+                    <a href="paginaproduto.html" class="produtoItem">
+                        <img src="Images/iconefoto.png" />
+                    <div>
+                        <h3>Nome</h3>
+                        <p>R$100,00</p>
+                    </div>
+                    </a>
+                </li>
             </ul>
         </section>
     </main>
