--- a/checkout.html
+++ b/checkout.html
@@ -90,7 +90,7 @@
             <p>Obrigado pela sua compra. Um e-mail de confirmação foi enviado para o seu endereço.</p>
             <p>Seu pedido será processado em breve.</p>
             <div id="buttonContainer" style="margin-top: 20px;">
-                <button id="btn-salvar" onclick="window.location.href='index.html'">Voltar para a Página Inicial</button>
+                <button id="btn-salvar" onclick="window.location.href='paginaInicial.html'">Voltar para a Página Inicial</button>
             </div>
         </section>
     </main>
